generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "cockroachdb"
  url      = env("DATABASE_URL")
}

// datasource db {
//   provider = "sqlite"
//   url      = "file:./eddah.db"
// }
enum UserType {
  user
  admin
}

enum AdoptStatus {
  pending
  accepted
  rejected
}

enum RescueStatus {
  pending
  rescued
  confirmed
}

model Org {
  id          String      @id @default(cuid())
  name        String
  email       String      @unique
  password    String
  bio         String?
  isVerified  Boolean     @default(false)
  createdAt   DateTime    @default(now())
  updatedAt   DateTime    @updatedAt
  location    String?
  phone       String?
  image       String?
  rescues     Rescues[]
  adopt       Adopt[]
  pets        Pet[]
  communities Community[]
}

model Rescues {
  id         String       @id @default(cuid())
  by         User?        @relation(fields: [userId], references: [id])
  pet        Pet?         @relation(fields: [petId], references: [id])
  petId      String?
  location   Location?    @relation(fields: [locationId], references: [id])
  status     RescueStatus @default(pending)
  image      String?
  org        Org?         @relation(fields: [orgId], references: [id])
  orgId      String?
  locationId String?
  userId     String?
}

model Location {
  id      String    @id @default(cuid())
  name    String?
  lat     String?
  lon     String?
  Rescues Rescues[]
}

model User {
  id                  String        @id @default(cuid())
  email               String        @unique
  name                String?
  bio                 String?
  password            String
  image               String?
  createdAt           DateTime      @default(now())
  updatedAt           DateTime      @updatedAt
  type                String        @default("user")
  communitiesFollowed Community[]
  Pet                 Pet[]
  Adopt               Adopt[]
  Saved               Saved[]
  createdCommunity    Community[]   @relation(name: "creator")
  vet                 Veterinarian?
  Rescues             Rescues[]
}

model Veterinarian {
  id        String   @id @default(cuid())
  createdAt DateTime @default(now())
  location  String?
  shopName  String?
  shopImage String?
  contact   String?
  User      User?    @relation(fields: [userId], references: [id])
  userId    String?  @unique
}

model Saved {
  id        String   @id @default(cuid())
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  User      User?    @relation(fields: [userId], references: [id])
  userId    String?
  Pet       Pet?     @relation(fields: [petId], references: [id])
  petId     String?

  @@unique([userId, petId])
}

model Community {
  id        String   @id @default(cuid())
  name      String
  username  String   @unique
  bio       String?
  creator   User?    @relation(name: "creator", fields: [creatorId], references: [id])
  creatorId String?
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  members   User[]
  Org       Org?     @relation(fields: [orgId], references: [id])
  orgId     String?
}

model Pet {
  id           String    @id @default(cuid())
  name         String
  bio          String?
  age          Int?
  breed        String?
  gender       String?
  image        String?
  characters   String[]
  dieases      String[]
  vaccinations String[]
  createdAt    DateTime  @default(now())
  updatedAt    DateTime  @updatedAt
  Adopt        Adopt[]
  Saved        Saved[]
  owner        User?     @relation(fields: [ownerId], references: [id])
  ownerId      String?
  Rescues      Rescues[]
  Org          Org?      @relation(fields: [orgId], references: [id])
  orgId        String?
}

model Adopt {
  id        String       @id @default(cuid())
  createdAt DateTime     @default(now())
  updatedAt DateTime     @updatedAt
  status    AdoptStatus? @default(pending)
  pet       Pet?         @relation(fields: [petId], references: [id])
  petId     String?
  user      User?        @relation(fields: [userId], references: [id])
  userId    String?
  Org       Org?         @relation(fields: [orgId], references: [id])
  orgId     String?

  @@unique([userId, petId])
  @@unique([orgId, petId])
}

// model Follow {
//   id        String       @id @default(cuid())
//   createdAt DateTime     @default(now())
//   updatedAt DateTime     @updatedAt
//   status    AdoptStatus? @default(pending)
//   pet       Pet?         @relation(fields: [petId], references: [id])
//   petId     String?
//   user      User?        @relation(fields: [userId], references: [id])
//   userId    String?
//   Org       Org?         @relation(fields: [orgId], references: [id])
//   orgId     String?

//   @@unique([userId, petId])
//   @@unique([orgId, petId])
// }
