//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Org {
  id String [pk]
  name String [not null]
  email String [unique, not null]
  password String [not null]
  bio String
  isVerified Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  location String
  phone String
  image String
  rescues Rescues [not null]
  adopt Adopt [not null]
  pets Pet [not null]
  communities Community [not null]
}

Table Rescues {
  id String [pk]
  by User
  pet Pet
  petId String
  location Location
  status RescueStatus [not null, default: 'pending']
  image String
  org Org
  orgId String
  locationId String
  userId String
}

Table Location {
  id String [pk]
  name String
  lat String
  lon String
  Rescues Rescues [not null]
}

Table User {
  id String [pk]
  email String [unique, not null]
  name String
  bio String
  password String [not null]
  image String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  type String [not null, default: 'user']
  communitiesFollowed Community [not null]
  Pet Pet [not null]
  Adopt Adopt [not null]
  Saved Saved [not null]
  createdCommunity Community [not null]
  vet Veterinarian
  Rescues Rescues [not null]
}

Table Veterinarian {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  location String
  shopName String
  shopImage String
  contact String
  User User
  userId String [unique]
}

Table Saved {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  User User
  userId String
  Pet Pet
  petId String

  indexes {
    (userId, petId) [unique]
  }
}

Table Community {
  id String [pk]
  name String [not null]
  username String [unique, not null]
  bio String
  creator User
  creatorId String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  members User [not null]
  Org Org
  orgId String
}

Table Pet {
  id String [pk]
  name String [not null]
  bio String
  age Int
  breed String
  gender String
  image String
  characters String[] [not null]
  dieases String[] [not null]
  vaccinations String[] [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  Adopt Adopt [not null]
  Saved Saved [not null]
  owner User
  ownerId String
  Rescues Rescues [not null]
  Org Org
  orgId String
}

Table Adopt {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  status AdoptStatus [default: 'pending']
  pet Pet
  petId String
  user User
  userId String
  Org Org
  orgId String

  indexes {
    (userId, petId) [unique]
    (orgId, petId) [unique]
  }
}

Enum UserType {
  user
  admin
}

Enum AdoptStatus {
  pending
  accepted
  rejected
}

Enum RescueStatus {
  pending
  rescued
  confirmed
}

Ref: Rescues.userId > User.id

Ref: Rescues.petId > Pet.id

Ref: Rescues.locationId > Location.id

Ref: Rescues.orgId > Org.id

Ref: Veterinarian.userId - User.id

Ref: Saved.userId > User.id

Ref: Saved.petId > Pet.id

Ref: Community.creatorId > User.id

Ref: Community.orgId > Org.id

Ref: Pet.ownerId > User.id

Ref: Pet.orgId > Org.id

Ref: Adopt.petId > Pet.id

Ref: Adopt.userId > User.id

Ref: Adopt.orgId > Org.id